identação do codigo

--- a/index.html
+++ b/index.html
@@ -1,80 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Meu Perfil</title>
-    <link rel="stylesheet" href="arquivos/css/style.css">
-</head>
+    <link rel="stylesheet" href="arquivos/css/style.css" />
+  </head>
 
-<script>(function(d){var s = d.createElement("script");s.setAttribute("data-account", "32X5q8zVp2");
-s.setAttribute("src", "https://cdn.userway.org/widget.js");(d.body || d.head).appendChild(s);})(document)
-</script>
-<noscript>Please ensure Javascript is enabled for purposes of 
+  <script>
+    (function (d) {
+      var s = d.createElement("script");
+      s.setAttribute("data-account", "32X5q8zVp2");
+      s.setAttribute("src", "https://cdn.userway.org/widget.js");
+      (d.body || d.head).appendChild(s);
+    })(document);
+  </script>
+  <noscript
+    >Please ensure Javascript is enabled for purposes of
     <a href="https://userway.org">website accessibility</a>
-</noscript>
+  </noscript>
 
-<body>
-        <ul class="menu">
-            <li>
-                <a href="index.html">Home</a>
-            </li>
-            <li>
-                <a href="contato.html">contato</a>
-            </li>
-            <li>
-                <a class="link link1" href="https://www.google.com/intl/pt-BR/calendar/about/" target="_blank">agenda online</a>
-            </li>
-        </ul>
+  <body>
+    <ul class="menu">
+      <li>
+        <a href="index.html">Home</a>
+      </li>
+      <li>
+        <a href="contato.html">contato</a>
+      </li>
+      <li>
+        <a
+          class="link link1"
+          href="https://www.google.com/intl/pt-BR/calendar/about/"
+          target="_blank"
+          >agenda online</a
+        >
+      </li>
+    </ul>
 
-        <h1 class="center">Como evitar a perda de clientes quando seus barbeiros saem?</h1>
-        <div class="container">
-            <div>
-                <img class="border la borda" src="arquivos/imagens/salão.png" alt="uma foto do salão">
-            </div>
-            <div class="borda">
-                <p class="center justify">
-                    Por mais que sua barbearia esteja repleta de clientes, você deve entender que, parte deles, é totalmente fiel a um barbeiro especifico.
+    <h1 class="center">
+      Como evitar a perda de clientes quando seus barbeiros saem?
+    </h1>
+    <div class="container">
+      <div>
+        <img
+          class="border la borda"
+          src="arquivos/imagens/salão.png"
+          alt="uma foto do salão"
+        />
+      </div>
+      <div class="borda">
+        <p class="center justify">
+          Por mais que sua barbearia esteja repleta de clientes, você deve
+          entender que, parte deles, é totalmente fiel a um barbeiro especifico.
+          Quando esse barbeiro sai da sua barbearia, é muito provável que ele
+          leve alguns clientes com ele! Resultando, assim, em uma perda
+          considerável de clientes em sua barbearia… Então fica a dúvida: Como
+          evitar a perda de clientes quando seus barbeiros saem? O primeiro
+          passo é você se relacionar com os clientes de cada barbeiro
+          individualmente. Você pode fazer isso de diversas formas, uma delas é
+          mandar uma mensagem personalizada para cada um deles, seja por SMS ou
+          WhatsApp. O importante é manter esse contato e lembrar o cliente que,
+          independente do barbeiro que o atende, é a sua barbearia que vai
+          promover uma boa experiencia para ele.
+        </p>
+      </div>
+    </div>
 
-                    Quando esse barbeiro sai da sua barbearia, é muito provável que ele leve alguns clientes com ele! Resultando, assim, em uma perda considerável de clientes em sua barbearia…
-
-                    Então fica a dúvida: Como evitar a perda de clientes quando seus barbeiros saem?
-
-                    O primeiro passo é você se relacionar com os clientes de cada barbeiro individualmente.
-
-                    Você pode fazer isso de diversas formas, uma delas é mandar uma mensagem personalizada para cada um deles, seja por SMS ou WhatsApp.
-
-                    O importante é manter esse contato e lembrar o cliente que, independente do barbeiro que o atende, é a sua barbearia que vai promover uma boa experiencia para ele.
-                </p>
-            </div>
-        </div>
-
-            <h2 class="center">Conheça O Nosso Ambiente</h2>
-            <div class="container video">
-                <iframe 
-                width="560" 
-                height="315" 
-                src="https://www.youtube.com/embed/WM5EeylGSgI" 
-                title="YouTube video player" 
-                frameborder="0" 
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-                allowfullscreen>
-                </iframe>
-            </div>
-            <hr> <!-- sepaaração de sessão -->
-            <footer>
-                <div class="container"> 
-                <img class="tm-social borda" src="arquivos/imagens/elo.png" alt="logo do cartão elo">
-                <img class="tm-social borda" src="arquivos/imagens/mastercard.png" alt="logo do cartão mastercar">
-                <img class="tm-social borda" src="arquivos/imagens/visa.png" alt="logo do cartão visa">
-                </div>
-                <p class="center">
-                    Imagens meramente ilustrativas. Copyright 2021 &copy; Barbearia La Máfia – Todos os direitos reservados.
-                    É proibida a reprodução parcial ou total do conteúdo desse site.<br/>
-                  </p>
-            </footer>
-            
-        
-</body>
+    <h2 class="center">Conheça O Nosso Ambiente</h2>
+    <div class="container video">
+      <iframe
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/WM5EeylGSgI"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen
+      >
+      </iframe>
+    </div>
+    <hr />
+    <!-- sepaaração de sessão -->
+    <footer>
+      <div class="container">
+        <img
+          class="tm-social borda"
+          src="arquivos/imagens/elo.png"
+          alt="logo do cartão elo"
+        />
+        <img
+          class="tm-social borda"
+          src="arquivos/imagens/mastercard.png"
+          alt="logo do cartão mastercar"
+        />
+        <img
+          class="tm-social borda"
+          src="arquivos/imagens/visa.png"
+          alt="logo do cartão visa"
+        />
+      </div>
+      <p class="center">
+        Imagens meramente ilustrativas. Copyright 2021 &copy; Barbearia La Máfia
+        – Todos os direitos reservados. É proibida a reprodução parcial ou total
+        do conteúdo desse site.<br />
+      </p>
+    </footer>
+  </body>
 </html>
