--- a/contato.html
+++ b/contato.html
@@ -7,8 +7,8 @@
     <title>contatos</title>
     <link rel="stylesheet" href="arquivos/css/style.css" />
   </head>
-  <body class="contato">
-    <ul class="menu">
+  <body>
+    <ul id="menu">
       <li>
         <a href="index.html">Home</a>
       </li>
@@ -27,23 +27,34 @@
 
     <h1 class="center">Entre em contato comigo</h1>
 
-    <div class="container video">
+    <div class="container mb-50">
       <div>
         <form>
-          <label for="Nome">Nome:</label><br />
-          <input type="text" id="nome" />
+          <label for="nome">Nome:</label><br />
+          <input type="text" id="nome" onkeyup="validaNome()" />
+          <div id="txtNome"></div>
+          <br />
+          <label for="email">E-mail:</label> <br />
+          <input type="email" id="email" onkeyup="validaEmail()" />
+          <div id="txtEmail"></div>
+          <br />
+          <label for="assunto:">Assunto:</label> <br />
+          <textarea
+            name="assunto"
+            id="assunto"
+            cols="60"
+            rows="5"
+            onkeyup="validaAssunto()"
+          ></textarea>
+          <div id="txtAssunto"></div>
           <br /><br />
-          <label for="Email:">E-mail:</label><br />
-          <input type="email" id="email" />
-          <br /><br />
-          <label for="Assunto:">assunto:</label><br />
-          <textarea name="assunto" id="assunto" cols="60" rows="10"></textarea>
-          <br /><br />
-          <button>enviar</button>
+          <button onclick="enviar()">enviar</button>
         </form>
       </div>
 
-      <div class="margem">
+      <div class="ml-50">
+        <p>Av.Paulista</p>
+        <p>São Paulo - SP</p>
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.7410569527838!2d-46.63157468538432!3d-23.54181406675493!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5f8c61020205%3A0x9ae474c606fef4!2sMercado%20Municipal%20de%20S%C3%A3o%20Paulo!5e0!3m2!1spt-BR!2sbr!4v1618595843117!5m2!1spt-BR!2sbr"
           width="600"
@@ -51,6 +62,9 @@
           style="border: 0"
           allowfullscreen=""
           loading="lazy"
+          onmousemove="mapaZoom()"
+          onmouseout="mapaNormal()"
+          id="mapa"
         >
         </iframe>
       </div>
@@ -85,8 +99,9 @@
       <p class="center">
         Imagens meramente ilustrativas. Copyright 2021 &copy; Barbearia La Máfia
         – Todos os direitos reservados. É proibida a reprodução parcial ou total
-        do conteúdo desse site.<br />
+        do conteúdo desse site.
       </p>
     </footer>
+    <script src="arquivos/js/script.js"></script>
   </body>
 </html>
