--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Meu Perfil</title>
+    <title>inicio</title>
     <link rel="stylesheet" href="arquivos/css/style.css" />
   </head>
 
@@ -22,7 +22,7 @@
   </noscript>
 
   <body>
-    <ul class="menu">
+    <ul id="menu">
       <li>
         <a href="index.html">Home</a>
       </li>
@@ -45,13 +45,13 @@
     <div class="container">
       <div>
         <img
-          class="border la borda"
+          class="br-50 wh-300 p-30"
           src="arquivos/imagens/salão.png"
           alt="uma foto do salão"
         />
       </div>
-      <div class="borda">
-        <p class="center justify">
+      <div class="p-30">
+        <p class="justify">
           Por mais que sua barbearia esteja repleta de clientes, você deve
           entender que, parte deles, é totalmente fiel a um barbeiro especifico.
           Quando esse barbeiro sai da sua barbearia, é muito provável que ele
@@ -69,7 +69,7 @@
     </div>
 
     <h2 class="center">Conheça O Nosso Ambiente</h2>
-    <div class="container video">
+    <div class="container mb-50">
       <iframe
         width="560"
         height="315"
@@ -78,8 +78,7 @@
         frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen
-      >
-      </iframe>
+      ></iframe>
     </div>
     <hr />
     <!-- sepaaração de sessão -->
@@ -104,7 +103,7 @@
       <p class="center">
         Imagens meramente ilustrativas. Copyright 2021 &copy; Barbearia La Máfia
         – Todos os direitos reservados. É proibida a reprodução parcial ou total
-        do conteúdo desse site.<br />
+        do conteúdo desse site.
       </p>
     </footer>
   </body>
